Phase2/project
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/build$ make
Consolidate compiler generated dependencies of target server
[ 16%] Building CXX object CMakeFiles/server.dir/source/server.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:117:40: error: invalid use of incomplete type ‘class Poco::Net::HTTPRequestHandler’
  117 | class WebSocketRequestHandler : public HTTPRequestHandler
      |                                        ^~~~~~~~~~~~~~~~~~
In file included from /usr/include/Poco/Net/HTTPServer.h:23,
                 from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:1:
/usr/include/Poco/Net/HTTPRequestHandlerFactory.h:32:7: note: forward declaration of ‘class Poco::Net::HTTPRequestHandler’
   32 | class HTTPRequestHandler;
      |       ^~~~~~~~~~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:120:10: error: ‘void WebSocketRequestHandler::handleRequest(Poco::Net::HTTPServerRequest&, Poco::Net::HTTPServerResponse&)’ marked ‘override’, but does not override
  120 |     void handleRequest(HTTPServerRequest &request, HTTPServerResponse &response) override
      |          ^~~~~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp: In member function ‘virtual int ServerApp::main(const std::vector<std::__cxx11::basic_string<char> >&)’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:162:31: error: ‘Poco::Net::HTTPRequestHandlerFactory’ is not a template
  162 |         HTTPServer server(new HTTPRequestHandlerFactory<WebSocketRequestHandler>(), ServerSocket(8080), new HTTPServerParams);
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:162:82: error: invalid new-expression of abstract class type ‘Poco::Net::HTTPRequestHandlerFactory’
  162 | TPRequestHandlerFactory<WebSocketRequestHandler>(), ServerSocket(8080), new HTTPServerParams);
      |                                                  ^

In file included from /usr/include/Poco/Net/HTTPServer.h:23,
                 from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:1:
/usr/include/Poco/Net/HTTPRequestHandlerFactory.h:35:15: note:   because the following virtual functions are pure within ‘Poco::Net::HTTPRequestHandlerFactory’:
   35 | class Net_API HTTPRequestHandlerFactory
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/Poco/Net/HTTPRequestHandlerFactory.h:49:37: note:     ‘virtual Poco::Net::HTTPRequestHandler* Poco::Net::HTTPRequestHandlerFactory::createRequestHandler(const Poco::Net::HTTPServerRequest&)’
   49 |         virtual HTTPRequestHandler* createRequestHandler(const HTTPServerRequest& request) = 0;
      |                                     ^~~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/server.dir/build.make:76: CMakeFiles/server.dir/source/server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/server.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
